# eos-data-distribution

./: .gitignore  DirMonitor.py  DirTools.py  EdgeGetter.py  Makefile.am  NEWS  README.md  Vagrantfile  architecture.dia  avahi-monitor.py  configure.ac  dbus-service.py  demo.sh  edge-router-avahi.py  edge-router.py  get_subscription.py  mock-usb-producer.py  ostree-store.py  run_demo_in_vagrant.sh  setup.cfg  setup.py  simulate-dbus-consumer.py  soma-subscriptions-producer.py  test_get_async.py  test_publish_async_nfd.py  usb-producer-gio.py  version.py
Chunks/: Pool.py  __init__.py
DirTools/: __init__.py  test_class.py
Edge/: __init__.py
HTTP/: __init__.py
MDNS/: __init__.py
NDN/: Endless.py  Pool.py  __init__.py
SimpleStore/: __init__.py  test_class.py
debian/: changelog  com.endlessm.EknSubscriptionsDownloader.service  control  copyright  edd-avahi-monitor.install  edd-avahi-monitor.service  edd-dbus-service.service  edd-ostree-store.service  edd-soma-subscriptions-producer.service  edd-usb-producer.install  edd-usb-producer.service  eos-data-distribution.conf  prensa-libre-updater.desktop  python-eos-data-distribution.install  python-eos-data-distribution.postinst  rules  soy502-updater.desktop
debian/tests/: control  edd-producer-soma-subscriptions  edd-producer-usb  edd-store
demo/: demo.sh  mock-usb-producer.py  restart-nfd.sh  simulate-dbus-consumer.py
docker/: buildall.sh
docker/eos-dev/: 10insecure  endless.list
docker/eos-dev-systemd/: Dockerfile
docker/eos-ndn-dev/: Dockerfile  nfd.conf
docs/: conf.py  eos_data_distribution.daemons.rst  eos_data_distribution.producers.rst  eos_data_distribution.rst  eos_data_distribution.utilities.rst  index.rst
endless_ndn/: Edge.py
endless_ndn/Chunks/: __init__.py
endless_ndn/DirTools/: __init__.py  test_class.py
endless_ndn/Edge/: __init__.py
endless_ndn/NDN/: Endless.py  Pool.py  (+1 more)
eos_data_distribution/: avahi_monitor.py  dbus_service.py  defaults.py  generate_subscription_id.sh  names.py  parallel.py  soma_subscription_fetcher.py  subid.py  subscription.py  utils.py
eosdatadistribution/: soma_subscription_fetcher.py  subscription.py
nspawn/: init.sh  start.sh
scripts/: edd-get-appdata  edd-get-chunk  edd-producer-soma  edd-producer-usb  edd-put-chunk  edd-service-dbus  edd-store-ostree
src/: Makefile.am  store.cpp
src/chunks/: Makefile.am
tests/: test_get_async.py  test_publish_async_nfd.py
tools/: test_get_async.py
(+74 files in other folders)
